Avatars and links

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 	<div id="container">
 		<div id="banner">
 			<div id="message">
-				<div id="message_box">Kill Yourself</div>
+				<div id="message_box">Stay Depressed</div>
 			</div>
 			<div id="time_box"></div>
 			<div id="day_box"></div>
 		</div>
 		<div class="form">
-			<input id="searchbox" name="q" type="text" autocomplete="off" class="cleardefault" maxlength="100" placeholder="search for inspiration."
+			<input id="searchbox" name="q" type="text" autocomplete="off" class="cleardefault" maxlength="100" placeholder="Search for a will to live"
 			 size="17" autofocus="autofocus" />
 			<input type="submit" id="image-button" value=""></input>
 		</div>
@@ -57,36 +57,31 @@
 				<a class="button">
 					<img src="avatar/avatar_01.png" class="avatar"></img>
 				</a>
-				<p>4chan</p>
+				<p>School</p>
 				<select onchange="if (this.value) window.location.href=this.value, this.selected;" class="choice">
-					<option value="https://boards.4chan.org/a/">ANIME</option>
-					<option value="https://boards.4chan.org/v/">GAMES</option>
-					<option value="https://boards.4chan.org/vg/">GENERALS</option>
-					<option value="https://boards.4chan.org/wg/">RICE</option>
+					<option value="https://nfk.itslearning.com/Index.aspx">| ItsLearning</option>
+					<option value="https://iskole.nfk.no/faces/home">| iSkole</option>
 				</select>
 			</div>
 			<div class="card" style="background-color: #FCB941; color: #F0A830;">
 				<a class="button">
 					<img src="avatar/avatar_02.png" class="avatar"></img>
 				</a>
-				<p>アニメ</p>
+				<p>Calculation</p>
 				<select onchange="if (this.value) window.location.href=this.value"" class=" choice">
-					<option value="http://kissanime.ru/">kissanime.ru</option>
-					<option value="https://nyaa.si/">nyaa.si</option>
-					<option value="https://animebytes.tv/">animebytes</option>
-					<option value="https://bato.to/">bato.to</option>
+					<option value="https://www.symbolab.com/">| symbolab</option>
+					<option value="https://www.integral-calculator.com/">| integrals</option>
+					<option value="https://www.derivative-calculator.net/">| derivatives</option>
 				</select>
 			</div>
 			<div class="card" style="background-color: #7E3661; color: #E6567A;">
 				<a class="button">
 					<img src="avatar/avatar_03.png" class="avatar"></img>
 				</a>
-				<p>へんたい</p>
-				<select onchange="if (this.value) window.location.href=this.value"" class=" choice">
-					<option value="https://exhentai.org/">sadpanda.org</option>
-					<option value="https://nhentai.net/">nhentai.net</option>
-					<option value="https://hitomi.la" />hitomi.la</option>
-					<option value="https://sukebei.nyaa.si/">sukebei.nyaa.si</option>
+				<p>Stuff</p>
+				<select onchange="if (this.value) window.location.href=this.value" class=" choice">
+					<option value="https://www.lokus.no/open/matematikk_r2">| math</option>
+					<option value="http://eksamensinfo.nfk.no/">| eksamen</option>
 				</select>
 			</div>
 			<div class="card" style="background-color: #4D545E; color: #4D545E;">
@@ -94,23 +89,19 @@
 					<img src="avatar/avatar_04.png" class="avatar"></img>
 				</a>
 				<p>music</p>
-				<select onchange="if (this.value) window.location.href=this.value"" class=" choice">
-					<option value="https://www.youtube.com/">youtube</option>
-					<option value="https://soundcloud.com/">soundcloud</option>
-					<option value="https://dojin.co/">dojin.co</option>
-					<option value="https://bandcamp.com/">bandcamp</option>
+				<select onchange="if (this.value) window.location.href=this.value" class=" choice">
+					<option value="https://www.youtube.com/">| youtube</option>
+					<option value="https://www.spotify.com/no/">| spotify</option>
 				</select>
 			</div>
 			<div class="card" style="background-color: #E26E67; color: #E74C3C;">
 				<a class="button">
 					<img src="avatar/avatar_05.png" class="avatar"></img>
 				</a>
-				<p>art</p>
-				<select onchange="if (this.value) window.location.href=this.value"" class=" choice">
-					<option value="https://www.pixiv.net/">pixiv.net</option>
-					<option value="https://www.deviantart.com/">deviantart</option>
-					<option value="https://www.tumblr.com/dashboard">tumblr</option>
-					<option value="https://danbooru.donmai.us/">danbooru</option>
+				<p>Tables</p>
+				<select onchange="if (this.value) window.location.href=this.value" class=" choice">
+					<option value="https://ptable.com/#Isotope">| periodic</option>
+					<option value="https://www.cs.hioa.no/~ivarj/3T%20fysikk/formelark.pdf">| physics</option>
 				</select>
 			</div>
 			<div class="card" style="background-color: #2CC990; color: #2CC990;">
@@ -118,11 +109,9 @@
 					<img src="avatar/avatar_06.png" class="avatar"></img>
 				</a>
 				<p>misc</p>
-				<select onchange="if (this.value) window.location.href=this.value"" class=" choice">
-					<option value="https://github.com/Catgrills">github</option>
-					<option value="https://greasyfork.org/en">greasyfork</option>
-					<option value="http://flatcolors.net/">flatcolors</option>
-					<option value="https://www.dealabs.com/">dealabs</option>
+				<select onchange="if (this.value) window.location.href=this.value" class=" choice">
+					<option value="http://platinumgod.co.uk/">| isaac</option>
+					<option value="https://github.com/The-Cripple">| github</option>
 				</select>
 			</div>
 		</div>
