--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<input type="submit" id="image-button" value=""></input>
 		</div>
 		<div id="main">
-			<div class="card" style="background-color: #42729B; color: #4387B5;">
+			<div class="card" style="background-color: #5d3e21; color: #5d3e21;">
 				<a class="button">
 					<img src="avatar/avatar_01.png" class="avatar"></img>
 				</a>
@@ -63,7 +63,7 @@
 					<option value="https://iskole.nfk.no/faces/home">| iSkole</option>
 				</select>
 			</div>
-			<div class="card" style="background-color: #FCB941; color: #F0A830;">
+			<div class="card" style="background-color: #5a6591; color: #5a6591;">
 				<a class="button">
 					<img src="avatar/avatar_02.png" class="avatar"></img>
 				</a>
@@ -74,7 +74,7 @@
 					<option value="https://www.derivative-calculator.net/">| derivatives</option>
 				</select>
 			</div>
-			<div class="card" style="background-color: #7E3661; color: #E6567A;">
+			<div class="card" style="background-color: #89bed3; color: #6da2b8;">
 				<a class="button">
 					<img src="avatar/avatar_03.png" class="avatar"></img>
 				</a>
@@ -84,7 +84,7 @@
 					<option value="http://eksamensinfo.nfk.no/">| eksamen</option>
 				</select>
 			</div>
-			<div class="card" style="background-color: #4D545E; color: #4D545E;">
+			<div class="card" style="background-color: #643e6b; color: #643e6b;">
 				<a class="button">
 					<img src="avatar/avatar_04.png" class="avatar"></img>
 				</a>
@@ -94,7 +94,7 @@
 					<option value="https://www.spotify.com/no/">| spotify</option>
 				</select>
 			</div>
-			<div class="card" style="background-color: #E26E67; color: #E74C3C;">
+			<div class="card" style="background-color: #aa3728; color: #aa3728;">
 				<a class="button">
 					<img src="avatar/avatar_05.png" class="avatar"></img>
 				</a>
@@ -104,7 +104,7 @@
 					<option value="https://www.cs.hioa.no/~ivarj/3T%20fysikk/formelark.pdf">| physics</option>
 				</select>
 			</div>
-			<div class="card" style="background-color: #2CC990; color: #2CC990;">
+			<div class="card" style="background-color: #2f385f; color: #2f385f;">
 				<a class="button">
 					<img src="avatar/avatar_06.png" class="avatar"></img>
 				</a>
