Added link to codecamp

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 				</a>
 				<p>misc</p>
 				<select onchange="if (this.value) window.location.href=this.value" class=" choice">
+					<option value="https://www.freecodecamp.org/">| coding</option>
 					<option value="http://platinumgod.co.uk/">| isaac</option>
 					<option value="https://github.com/The-Cripple">| github</option>
 				</select>
